fixed search bar margin and code/pre wrap

--- a/assets/mikio.less
+++ b/assets/mikio.less
@@ -34,6 +34,13 @@
     position: sticky;
 }
 
+.mikio-pre-wrap {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+}
+
 
 /* Containers */
 html {
@@ -357,7 +364,7 @@ html, body {
     }
 
     .mikio-search {
-        margin: 0 0 1rem 0;
+        margin: 1rem 0 1rem 0;
     }
 
     .mikio-sidebar-content {
@@ -435,7 +442,6 @@ html, body {
 
 .mikio-content {
     box-sizing: border-box;
-    overflow-x: auto;
     width: 100%;
     max-width: 100%;
     background-color: @ini_content_background;
@@ -1021,6 +1027,7 @@ code, pre {
     color: @ini_code_text_color;
     background-color: @ini_code_background_color;
     word-wrap: @ini_code_word_wrap;
+    .mikio-pre-wrap;
     border: 1px solid @ini_code_border_color;
     padding: 1em;
     line-height: @ini_code_line_height;
